syntax = "proto3";

package dmx_controller.timecoded;

import "proto/color.proto";
import "proto/effect.proto";
import "proto/output.proto";

message Effect {
  dmx_controller.Effect effect = 1;
  
  uint32 start_ms = 2;
  uint32 end_ms = 3;
}

message Layer { repeated Effect effects = 1; }

message Sequence {
  string name = 1;
  uint32 native_beats = 2;

  repeated Layer layers = 3;
}

message Show {
  message AudioTrack {
    uint64 audio_file_id = 1;
  }

  message Output {
    bool collapsed = 1;

    dmx_controller.OutputTarget output_target = 2;

    repeated Layer layers = 3;
  }

  string name = 1;
  dmx_controller.ColorPalette color_palette = 2;
  AudioTrack audio_track = 3;
  repeated Output outputs = 4;
}
